CMAKE_MINIMUM_REQUIRED(VERSION 3.13 FATAL_ERROR)
SET(PROJECT_NAME example)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_C_STANDARD 99)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)

INCLUDE(target_link)

PROJECT(cmake_arm_cortx_example C CXX ASM)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(lib)
